{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 19,
  "lineage": "4e509428-39b4-0d0c-4a35-67bd5fffc264",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-098269967e01bde1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-098269967e01bde1d",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "qubinode-private-us-gov-west-1a",
              "kubernetes.io/cluster/qubinode": "owned"
            },
            "vpc_id": "vpc-09f49b420d944ab0e"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-0eed1d94f804a6d83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "id": "subnet-0eed1d94f804a6d83",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "qubinode-private-us-gov-west-1b",
              "kubernetes.io/cluster/qubinode": "owned"
            },
            "vpc_id": "vpc-09f49b420d944ab0e"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:781679968553:subnet/subnet-084ae5e1b4664d57b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "id": "subnet-084ae5e1b4664d57b",
            "map_public_ip_on_launch": false,
            "owner_id": "781679968553",
            "state": "available",
            "tags": {
              "Name": "qubinode-private-us-gov-west-1c",
              "kubernetes.io/cluster/qubinode": "owned"
            },
            "vpc_id": "vpc-09f49b420d944ab0e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:loadbalancer/net/qubinode-int/ec83cf8a3e5e8aed",
            "arn_suffix": "net/qubinode-int/ec83cf8a3e5e8aed",
            "dns_name": "qubinode-int-ec83cf8a3e5e8aed.elb.us-gov-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:loadbalancer/net/qubinode-int/ec83cf8a3e5e8aed",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "qubinode-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084ae5e1b4664d57b"
              },
              {
                "subnet_id": "subnet-098269967e01bde1d"
              },
              {
                "subnet_id": "subnet-0eed1d94f804a6d83"
              }
            ],
            "subnets": [
              "subnet-084ae5e1b4664d57b",
              "subnet-098269967e01bde1d",
              "subnet-0eed1d94f804a6d83"
            ],
            "tags": {
              "Name": "qubinode-int",
              "kubernetes.io/cluster/qubinode": "shared"
            },
            "vpc_id": "vpc-09f49b420d944ab0e",
            "zone_id": "ZMG1MZ2THAWF1"
          },
          "dependencies": [
            "data.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_int_22623",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:listener/net/qubinode-int/ec83cf8a3e5e8aed/fe987e3f6d3602e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:targetgroup/qubinode-22623-int-tg/fbd4799c926498f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:listener/net/qubinode-int/ec83cf8a3e5e8aed/fe987e3f6d3602e4",
            "load_balancer_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:loadbalancer/net/qubinode-int/ec83cf8a3e5e8aed",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.control_plane_int",
            "aws_lb_target_group.control_plane_int_22623",
            "data.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_int_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:listener/net/qubinode-int/ec83cf8a3e5e8aed/52ed55c924323d3b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:targetgroup/qubinode-6443-int-tg/206af0accc786546",
                "type": "forward"
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:listener/net/qubinode-int/ec83cf8a3e5e8aed/52ed55c924323d3b",
            "load_balancer_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:loadbalancer/net/qubinode-int/ec83cf8a3e5e8aed",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.control_plane_int",
            "aws_lb_target_group.control_plane_int_6443",
            "data.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_int_22623",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:targetgroup/qubinode-22623-int-tg/fbd4799c926498f9",
            "arn_suffix": "targetgroup/qubinode-22623-int-tg/fbd4799c926498f9",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:targetgroup/qubinode-22623-int-tg/fbd4799c926498f9",
            "lambda_multi_value_headers_enabled": false,
            "name": "qubinode-22623-int-tg",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "ip",
            "vpc_id": "vpc-09f49b420d944ab0e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_int_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:targetgroup/qubinode-6443-int-tg/206af0accc786546",
            "arn_suffix": "targetgroup/qubinode-6443-int-tg/206af0accc786546",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:781679968553:targetgroup/qubinode-6443-int-tg/206af0accc786546",
            "lambda_multi_value_headers_enabled": false,
            "name": "qubinode-6443-int-tg",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "ip",
            "vpc_id": "vpc-09f49b420d944ab0e"
          }
        }
      ]
    }
  ]
}